Adding address verification and look a like modeling

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,10 @@ h5py = "*"
 plotly = "*"
 python-levenshtein = "*"
 scikit-learn = "*"
+osmnx = "*"
+protobuf = "*"
+sqlalchemy = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
