--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-streamlit = "*"
+streamlit = "1.13"
 tensorflow = "*"
 networkx = "*"
 streamlit-authenticator = "*"
@@ -16,7 +16,7 @@ scikit-learn = "*"
 osmnx = "*"
 sqlalchemy = "*"
 psycopg2-binary = "*"
-protobuf = "3.19.6"
+protobuf = "3.19"
 
 [dev-packages]
 
