--- a/Pipfile
+++ b/Pipfile
@@ -4,18 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-tensorflow = "*"
+streamlit = "==1.16.0"
 networkx = "*"
-streamlit-authenticator = "*"
 pyvis = "*"
 h5py = "*"
 plotly = "*"
 python-levenshtein = "*"
-scikit-learn = "*"
+scikit-learn = "1.0.2"
 sqlalchemy = "*"
 psycopg2-binary = "*"
-streamlit = "==1.16.0"
-protobuf = "<4,>=3.12"
+protobuf = "<3.20,>=3.12"
 
 [dev-packages]
 
