--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ pyvis = "*"
 h5py = "*"
 plotly = "*"
 python-levenshtein = "*"
+osmnx = "*"
+sqlalchemy = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
