--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-streamlit = "==1.16.0"
+streamlit = "==1.13"
 networkx = "*"
 pyvis = "*"
 h5py = "*"
@@ -13,6 +13,7 @@ python-levenshtein = "*"
 osmnx = "*"
 sqlalchemy = "*"
 psycopg2-binary = "*"
+protobuf = "==3.19"
 
 [dev-packages]
 
