--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ h5py = "*"
 plotly = "*"
 python-levenshtein = "*"
 osmnx = "*"
-sqlalchemy = "*"
+sqlalchemy = "<2.0"
 psycopg2-binary = "*"
 protobuf = "==3.19"
 scikit-learn = "==1.0.2"
