--- a/Pipfile
+++ b/Pipfile
@@ -5,20 +5,20 @@ name = "pypi"
 
 [packages]
 streamlit = "==1.13"
-networkx = "*"
-pyvis = "*"
-h5py = "*"
-plotly = "*"
-python-levenshtein = "*"
+networkx = "==3.1"
+pyvis = "==0.3.2"
+h5py = "==3.9.0"
+plotly = "==5.16.1"
+python-levenshtein = "==0.21.1"
 osmnx = "*"
 sqlalchemy = "<2.0"
-psycopg2-binary = "*"
+psycopg2-binary = "==2.9.7"
 protobuf = "==3.19"
 scikit-learn = "==1.0.2"
-psutil = "*"
-haversine = "*"
+psutil = "==5.9.5"
+haversine = "==2.8.0"
 altair = "==4.0"
-matplotlib = "*"
+matplotlib = "==3.7.2"
 jaro-winkler = "==2.0.3"
 
 [dev-packages]
