--- a/Pipfile
+++ b/Pipfile
@@ -4,23 +4,23 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-streamlit = "==1.37"
-networkx = "==3.1"
-pyvis = "==0.3.2"
-h5py = "==3.9.0"
-plotly = "==5.16.1"
-python-levenshtein = "==0.21.1"
+streamlit = "==*"
+networkx = "*"
+pyvis = "*"
+h5py = "*"
+plotly = "*"
+python-levenshtein = "*"
 osmnx = "*"
 sqlalchemy = "<2.0"
-psycopg2-binary = "==2.9.7"
-protobuf = "==3.19"
-scikit-learn = "==1.0.2"
-psutil = "==5.9.5"
-haversine = "==2.8.0"
-altair = "==4.0"
-matplotlib = "==3.7.2"
-jaro-winkler = "==2.0.3"
-numpy = "==1.25.2"
+psycopg2-binary = "*"
+protobuf = "*"
+scikit-learn = "*"
+psutil = "*"
+haversine = "*"
+altair = "*"
+matplotlib = "*"
+jaro-winkler = "*"
+numpy = "*"
 
 [dev-packages]
 
