Add neo4j visualization

--- a/Pipfile
+++ b/Pipfile
@@ -7,11 +7,9 @@ name = "pypi"
 streamlit = "*"
 networkx = "*"
 pyvis = "*"
-h5py = "*"
 plotly = "*"
 python-levenshtein = "*"
 osmnx = "*"
-sqlalchemy = "<2.0"
 psycopg2-binary = "*"
 protobuf = "*"
 scikit-learn = "*"
@@ -23,6 +21,7 @@ jaro-winkler = "*"
 numpy = "*"
 pandas = "*"
 validators = "*"
+st-link-analysis = "*"
 
 [dev-packages]
 
